Bug 108067 - [FILESAVE DOCX] Exploded Donut charts do not "explode" if more than 1 column of data
Summary: [FILESAVE DOCX] Exploded Donut charts do not "explode" if more than 1 column ...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
4.4 all versions
Hardware: All All
: medium normal
Assignee: Tünde Tóth
URL:
Whiteboard: target:7.1.0
Keywords:
Depends on:
Blocks: OOXML-Chart
  Show dependency treegraph
 
Reported: 2017-05-24 15:49 UTC by Gabor Kelemen (Collabora)
Modified: 2020-09-14 09:49 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file from LO 5.3 (14.14 KB, application/vnd.oasis.opendocument.text)
2017-05-24 15:49 UTC, Gabor Kelemen (Collabora)
Details
Example file saved from LO 5.3 (14.72 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2017-05-24 15:50 UTC, Gabor Kelemen (Collabora)
Details
Docx in Word 2013 and odt in LO 5.3 side by side (174.98 KB, image/png)
2017-05-24 15:53 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2017-05-24 15:49:44 UTC
Created attachment 133537 [details]
Example file from LO 5.3

Exploded Donut charts appear as regular Donut charts when the file is saved as DOCX in LibreOffice Writer.

Steps to reproduce:
1. Create an empty text document in LibreOffice Writer
2. Insert a Chart
3. Change the chart type to Exploded Donut
4. Save the file as DOCX
5. Reopen the file either in LibreOffice Writer or Microsoft Word 2013

Actual results:
The chart appears as regular Donut chart.

Expected results:
The chart appears as exploded Donut chart.
Comment 1 Gabor Kelemen (Collabora) 2017-05-24 15:50:17 UTC
Created attachment 133538 [details]
Example file saved from LO 5.3
Comment 2 Gabor Kelemen (Collabora) 2017-05-24 15:53:53 UTC
Created attachment 133539 [details]
Docx in Word 2013 and odt in LO 5.3 side by side
Comment 3 Xisco Faulí 2017-05-24 16:06:41 UTC
Confirmed in

- Version: 5.4.0.0.alpha1+
Build ID: 74d2e606fd3605fe0a585f596eaa215ae4e20d18
CPU Threads: 4; OS Version: Linux 4.8; UI Render: default; VCL: gtk2; 
Locale: en-US (ca_ES.UTF-8); Calc: group

- Version: 4.3.0.0.alpha1+
Build ID: c15927f20d4727c3b8de68497b6949e72f9e6e9e

In previous versions the chart wasn't exported. in banch 4.3 it was exported as a pie chart.
Comment 4 Yousuf Philips (jay) (retired) 2017-05-24 19:09:59 UTC
So LO correctly exports exploding donuts with 1 column in its data table, but has problems when there are 2 or more columns.
Comment 5 QA Administrators 2018-05-25 02:43:16 UTC Comment hidden (obsolete)
Comment 6 Adam Kovacs 2019-02-12 12:14:01 UTC
So the problem is that LO exporting the <explosion val="something"> tag to the first dataseries instead of to the last one.
I've made a patch that switching this position...
https://gerrit.libreoffice.org/#/c/67083/1/oox/source/export/chartexport.cxx
...but the bug origin is this:
https://bugs.documentfoundation.org/show_bug.cgi?id=123218
... so if that bug is fixed, that fix this also :)
Comment 7 Luke 2019-02-14 22:44:32 UTC
Markus,
Do you have any advice for Adam? This is tricky because native files are the reverse order as OOXML. And we correctly roundtrip OOXML files.
Comment 8 Commit Notification 2020-08-24 10:08:38 UTC
Tünde Tóth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/22cd7d8b679d238559820d3c4cd5ff0b9153ffce

tdf#123218 tdf#108067 config key ReverseXAxisOrientationDoughnutChart

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 NISZ LibreOffice Team 2020-08-25 10:10:34 UTC
No backport needed since the commit adds a config key.
Comment 10 NISZ LibreOffice Team 2020-09-14 09:49:02 UTC
Verified in:

Version: 7.1.0.0.alpha0+ (x64)
Build ID: 34a09c9c61bff30e8c4d16132bb47b2b1b16e422
CPU threads: 4; OS: Windows 10.0 Build 17134; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: threaded