tdf#108067 OOXML export: fixing exploded doughnut charts

Before this patch the correct values of explosion xml tags were exported
for the first dataseries instead of last dataseries in exploded doughnut
charts.

Change-Id: Id51e690ebc680f71b329f71c56aea496f8b204f9